# data-platform-study

./: README.md  compose.yaml  justfile
datalake/: compose.yml  justfile
datalake-ingest/: compose.yml  justfile  main.py  pyproject.toml
duckdb/: main.py  pyproject.toml
etl/: bronze.ipynb  bronze.py  gold.ipynb  gold.py  pyproject.toml  query.ipynb  query.py  silver.ipynb  silver.py  spark-jupyter.dockerfile
etl/.Trash-0/files/: query.py
etl/.Trash-0/info/: query.py.trashinfo
etl/spark_config/: __init__.py
ingest/: main.py
ingest-api/: ingest-api.dockerfile  main.py  pyproject.toml  requirements.txt
minio/: README.md  minio-init.sh
presto/: bronze.properties  config.properties  example.properties  gold.properties  silver.properties
producer/: main.py  producer.dockerfile  pyproject.toml
spark/: README.md  justfile  spark-base.dockerfile  spark-master.dockerfile  spark-thrift-entrypoint.sh  spark-thrift.dockerfile  spark-worker.dockerfile
superset/: .env  docker-bootstrap.sh
unitycatalog/: unitycatalog-ui.dockerfile  unitycatalog-ui.nginx.conf
workflows/: README.md  bronze.py  justfile
