[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Ben Sivoravong <bensivo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^36.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
